# WTC

1stSemester/Algos/Corewar/: Makefile  README.md  author
1stSemester/Algos/Corewar/asm/: Makefile
1stSemester/Algos/Corewar/libft/: Makefile  author  ft_bzero.c  ft_dbarrnew.c  ft_ftarrnew.c  ft_intarrnew.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isdigits.c  ft_isnumber.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_matrixdel.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printgrid.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbrnl.c  ft_putstr.c  ft_putstr_fd.c  ft_splitspace.c  ft_strarrdel.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+26 more)
1stSemester/Algos/Corewar/resources/: fork_zork.s  myzork.cor  test_ldi.s
1stSemester/Algos/Corewar/vm/: Makefile  asm  list  zork.s
1stSemester/Algos/filler/: Makefile
1stSemester/Algos/filler/includes/: filler.h  (+1 more)
1stSemester/Algos/get_next_line/: get_next_line.c  get_next_line.h
1stSemester/Algos/libft/: Makefile  ft_atoi.c  ft_strdup.c  ft_strlen.c  ft_strnew.c  ft_strsplit.c  libft.h
1stSemester/Graphics/RayTracing-RT-/: cone_1.map  cone_2.map  cylinder_1.map  generate.map  map.map  map1.map  map_1.map  map_2.map  map_3.map  procedural_tex.map  rand.map  sphere_1.map  sphere_2.map  sphere_3.map  sphere_4.map  sphere_5.map  test.map  tex_mapping.map
1stSemester/Graphics/Wolf3D/: Makefile  map00
1stSemester/Graphics/fdf/: Makefile
2ndSemester/Algos/Gomoku/: Black.java  Game.java  GameObject.java  Handler.java  ID.java  MouseGame.java  Player.java  White.java  Window.java
3rdSemester/CPP/AbstractVM/: Error.hpp  Factory.cpp  Factory.hpp  IOperand.hpp  Logic.cpp  Logic.hpp  Makefile  Operand.cpp  Operand.hpp  Parse.cpp  Parse.hpp  Read.cpp  Read.hpp  author  eOperandType.hpp  main.cpp  test1.av
3rdSemester/CPP/Nibbler/: CMakeLists.txt  README.md  run.sh
3rdSemester/CPP/Nibbler/include/: ErrorRefactor.hpp  Factory.hpp  GameElement.hpp  IFunctions.hpp  Keys.hpp  Loop.hpp  Snake.hpp  eLib.hpp  eSnake.hpp
3rdSemester/CPP/Nibbler/opengl/: CMakeLists.txt
3rdSemester/CPP/Nibbler/opengl/includes/: Functions.hpp
3rdSemester/CPP/Nibbler/opengl/src/: Functions.cpp
3rdSemester/CPP/Nibbler/sdl/: CMakeLists.txt
3rdSemester/CPP/Nibbler/sdl/includes/: Functions.hpp
3rdSemester/CPP/Nibbler/sdl/src/: Functions.cpp
3rdSemester/CPP/Nibbler/sfml/: CMakeLists.txt
3rdSemester/CPP/Nibbler/sfml/includes/: Functions.hpp
3rdSemester/CPP/Nibbler/sfml/src/: Functions.cpp
3rdSemester/CPP/Nibbler/src/: ErrorRefactor.cpp  Factory.cpp  GameElement.cpp  Loop.cpp  Snake.cpp  main.cpp
3rdSemester/CPP/Nibbler/test/: CMakeLists.txt  test.cpp
(+121 files in other folders)
